--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
 <body>
 <script>
 	window.onload = function () {
-		liff
+    alert('アラート');
+	/*
+  	liff
   .init({
     liffId: "1660702039-9nZBBYR7",
   })
@@ -19,6 +21,7 @@
     }]).then(function() {
         liff.closeWindow();
     })
+    */
 	}
 </script>
 </body>
