--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
+  <input type="button" value="お支払い完了！" onclick="sendMessage()">
 <script>
-	window.onload = function () {
+	/*window.onload = function () {
     alert('アラート');
+    */
 	/*
   	liff
   .init({
@@ -23,7 +25,10 @@
         liff.closeWindow();
     })
     */
-	}
+	//}
+  function sendMessage(){
+    alert('アラート');
+  }
 </script>
 </body>
 </html>
