--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   a
   <input type="button" value="お支払い完了！" onclick="sendMessage()">
 <script>
-	/*window.onload = function () {
+	window.onload = function () {
     alert('アラート');
-    */
+    setTimeout(window.close(), 6000); 
+  
 	/*
   	liff
   .init({
@@ -26,7 +27,7 @@
         liff.closeWindow();
     })
     */
-	//}
+	}
   function sendMessage(){
     alert('アラート');
   }
