--- a/index.html
+++ b/index.html
@@ -5,14 +5,25 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body>
-  a
+  <span id="announce"></span>
   <input type="button" value="お支払い完了！" onclick="sendMessage()">
 <script>
 	window.onload = function () {
-    alert('アラート');
-    setTimeout(window.close(), 6000); 
+    setTimeout(alert('アラート'), 6000); 
   
-	/*
+
+  for(let i = 0; i < 6; i++) {
+    setTimeout(() => {
+      document.getElementById( "announce" ).innerHTML =  (5 - i);
+    },
+    i * 1000);
+}
+/*
+setTimeout(() => {
+  //window.location = 'https:';
+  window.close();
+},
+5000);
   	liff
   .init({
     liffId: "1660702039-9nZBBYR7",
