--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <input type="button" value="お支払い完了！" onclick="sendMessage()">
 <script>
 	window.onload = function () {
-    setTimeout(alert('アラート'), 6000); 
+    //setTimeout(alert('アラート'), 6000); 
   
 
   for(let i = 0; i < 6; i++) {
