--- a/index.html
+++ b/index.html
@@ -25,8 +25,6 @@
     },
     i * 1000);
 }
-
-liff.closeWindow();
 /*
 setTimeout(() => {
   //window.location = 'https:';
@@ -43,7 +41,8 @@ setTimeout(() => {
     */
 	}
   function sendMessage(){
-    alert('アラート');
+    //alert('アラート');
+    liff.closeWindow();
   }
 </script>
 </body>
